ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: go.calc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-calc
                port:
                  number: 8080
